[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/world.gd" type="Script" id=1]
[ext_resource path="res://Fonts/pixel.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/wavesManager.gd" type="Script" id=3]
[ext_resource path="res://Sounds/game.ogg" type="AudioStream" id=4]

[node name="world" type="Node2D"]

pause_mode = 1
script = ExtResource( 1 )

[node name="sfx" type="AudioStreamPlayer2D" parent="." index="0"]

position = Vector2( 413.782, 567.804 )
scale = Vector2( 4, 4 )
stream = null
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="hud" type="Node2D" parent="." index="1"]

pause_mode = 1
z = 100

[node name="score" type="Label" parent="hud" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Score : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="wave" type="Label" parent="hud" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 649.0
margin_top = 5.0
margin_right = 758.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "waves :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="energy_player1" type="Node2D" parent="hud" index="2"]

position = Vector2( 255, 15 )

[node name="energy_player2" type="Node2D" parent="hud" index="3"]

position = Vector2( 468, 15 )

[node name="waveGenerator" type="Node2D" parent="." index="2"]

pause_mode = 1
position = Vector2( 0, 5 )
script = ExtResource( 3 )

[node name="masterTimer" type="Timer" parent="waveGenerator" index="0"]

process_mode = 1
wait_time = 30.0
one_shot = false
autostart = true

[node name="asteroidSpawnTimer" type="Timer" parent="waveGenerator" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="droneResume" type="Timer" parent="waveGenerator" index="2"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="tieSpawnTimer" type="Timer" parent="waveGenerator" index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="bigAsteroidSpawnTimer" type="Timer" parent="waveGenerator" index="4"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="interceptorSpwnTimer" type="Timer" parent="waveGenerator" index="5"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[node name="droneSpawnTimer" type="Timer" parent="waveGenerator" index="6"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="motherShipSpawnTimer" type="Timer" parent="waveGenerator" index="7"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="turretSpawnTimer" type="Timer" parent="waveGenerator" index="8"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="spawnPos0" type="Position2D" parent="waveGenerator" index="9"]

position = Vector2( 61, -61 )

[node name="spawnPos1" type="Position2D" parent="waveGenerator" index="10"]

position = Vector2( 122, -61 )

[node name="spawnPos2" type="Position2D" parent="waveGenerator" index="11"]

position = Vector2( 244, -61 )

[node name="spawnPos3" type="Position2D" parent="waveGenerator" index="12"]

position = Vector2( 183, -61 )

[node name="spawnPos4" type="Position2D" parent="waveGenerator" index="13"]

position = Vector2( 305, -61 )

[node name="spawnPos5" type="Position2D" parent="waveGenerator" index="14"]

position = Vector2( 366, -61 )

[node name="spawnPos6" type="Position2D" parent="waveGenerator" index="15"]

position = Vector2( 427, -61 )

[node name="spawnPos7" type="Position2D" parent="waveGenerator" index="16"]

position = Vector2( 488, -61 )

[node name="spawnPos8" type="Position2D" parent="waveGenerator" index="17"]

position = Vector2( 549, -61 )

[node name="spawnPos9" type="Position2D" parent="waveGenerator" index="18"]

position = Vector2( 610, -61 )

[node name="spawnPos10" type="Position2D" parent="waveGenerator" index="19"]

position = Vector2( 671, -61 )

[node name="spawnPos11" type="Position2D" parent="waveGenerator" index="20"]

position = Vector2( 732, -61 )

[node name="enemySfx" type="AudioStreamPlayer2D" parent="waveGenerator" index="21"]

stream = null
volume_db = -5.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="musicStream" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="playerSpawn" type="Position2D" parent="." index="4"]

position = Vector2( 400, 560 )

[connection signal="timeout" from="waveGenerator/masterTimer" to="waveGenerator" method="_on_masterTimer_timeout"]

[connection signal="timeout" from="waveGenerator/asteroidSpawnTimer" to="waveGenerator" method="_on_asteroidSpawnTimer_timeout"]

[connection signal="timeout" from="waveGenerator/tieSpawnTimer" to="waveGenerator" method="_on_tieSpawnTimer_timeout"]

[connection signal="timeout" from="waveGenerator/bigAsteroidSpawnTimer" to="waveGenerator" method="_on_bigAsteroidSpawnTimer_timeout"]

[connection signal="timeout" from="waveGenerator/interceptorSpwnTimer" to="waveGenerator" method="_on_interceptorSpwnTimer_timeout"]

[connection signal="timeout" from="waveGenerator/droneSpawnTimer" to="waveGenerator" method="_on_droneSpawnTimer_timeout"]

[connection signal="timeout" from="waveGenerator/motherShipSpawnTimer" to="waveGenerator" method="_on_motherShipSpawnTimer_timeout"]

[connection signal="timeout" from="waveGenerator/turretSpawnTimer" to="waveGenerator" method="_on_turretSpawnTimer_timeout"]


